add remote Windows and GitLab checkpoint
